oxiplate/tests/crates/default-html/tests/broken/wrong-group.stderr
error: Invalid escaper group specified
 --> tests/broken/wrong-group.rs:4:64
  |
4 | #[oxiplate_inline(html: "{% for message in &messages %}\n<p>{{ hhtml.text: message }}</p>{% endfor %}\n")]
  |                                                                ^^^^^
